[gd_scene load_steps=7 format=3 uid="uid://i5my6arf6jgs"]

[ext_resource type="Texture2D" uid="uid://bmw6l2k81eycp" path="res://Assets/carta.png" id="1_rjwa4"]
[ext_resource type="Script" uid="uid://bxresvg2326r8" path="res://Scripts/components/OLDcard_display.gd" id="2_6acnv"]

[sub_resource type="LabelSettings" id="LabelSettings_lutgg"]
line_spacing = -5.0
font_size = 13
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wj0ox"]
line_spacing = -5.0
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qxxii"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gk2pa"]
radius = 82.0
height = 232.0

[node name="CardDisplay" type="TextureRect"]
custom_minimum_size = Vector2(186, 235)
anchors_preset = -1
anchor_left = -0.00347227
anchor_top = 0.00154321
anchor_right = 0.157986
anchor_bottom = 0.388642
offset_left = 4.0
offset_top = 2.00002
offset_right = 4.0
offset_bottom = -13.84
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.08)
texture = ExtResource("1_rjwa4")
expand_mode = 1
script = ExtResource("2_6acnv")
metadata/_edit_use_anchors_ = true

[node name="imagem" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0860215
anchor_top = 0.169279
anchor_right = 0.919355
anchor_bottom = 0.735237
offset_top = 0.219429
offset_right = 3.05176e-05
offset_bottom = 0.219391
mouse_filter = 2
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Nome_da_carta" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.220431
anchor_top = 0.748621
anchor_right = 0.784947
anchor_bottom = 0.9316
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
text = "Nome_da_carta"
label_settings = SubResource("LabelSettings_lutgg")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 35
max_lines_visible = 3
metadata/_edit_use_anchors_ = true

[node name="Descrição_do_acontecimento" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0927155
anchor_top = 0.580808
anchor_right = 0.880797
anchor_bottom = 0.833334
offset_top = 3.05176e-05
offset_bottom = 3.05176e-05
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Descrição"
label_settings = SubResource("LabelSettings_wj0ox")
autowrap_mode = 2
clip_text = true
max_lines_visible = 5
metadata/_edit_use_anchors_ = true

[node name="Ano" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.295699
anchor_top = 0.847236
anchor_right = 0.7561
anchor_bottom = 0.919347
offset_top = -0.0263977
offset_right = -1.52588e-05
offset_bottom = 0.0274658
text = "Ano"
label_settings = SubResource("LabelSettings_qxxii")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Carta" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Carta"]
top_level = true
position = Vector2(93, 130)
shape = SubResource("CapsuleShape2D_gk2pa")

[node name="Tags" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 42.0001
offset_top = 198.148
offset_right = 143.0
offset_bottom = 221.148
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "tags"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Carta" to="." method="_on_carta_mouse_entered"]
[connection signal="mouse_exited" from="Carta" to="." method="_on_carta_mouse_exited"]
